test/typeerrors/ex4.golden
Building file ../test/typeerrors/ex4.act
  Compiling ex4.act for release

ERROR: Error when compiling ex4 module: Type error

  |
1 |def f(x,y):
  |        ^
Keyword element 'y' is not found

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

